# qcicada

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs
python/: pyproject.toml
python/examples/: basic.py
python/src/qcicada/: __init__.py  crypto.py  device.py  discovery.py  protocol.py  serial.py  types.py
python/tests/: conftest.py  test_crypto.py  test_device.py  test_protocol.py
src/: crypto.rs  device.rs  discovery.rs  lib.rs  protocol.rs  serial.rs  types.rs
tests/: device.rs
