[project]
name = "qcicada"
version = "0.1.0"
description = "Python SDK for the QCicada QRNG (Crypta Labs) — macOS-first, works on Linux too"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
